--- a/seat_simulation_env.yml
+++ b/seat_simulation_env.yml
@@ -40,9 +40,13 @@ dependencies:
     - itsdangerous==2.2.0
     - jinja2==3.1.6
     - jiter==0.12.0
+    - matplotlib==3.9.2
+    - numpy==2.0.2
     - openai==2.8.1
+    - pandas==2.2.3
     - pydantic==2.12.4
     - pydantic-core==2.41.5
+    - python-dateutil==2.9.0
     - sniffio==1.3.1
     - tqdm==4.67.1
     - typing-extensions==4.15.0
